After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683068 - Login screen still persists after logon when using gdm in fallback mode
Login screen still persists after logon when using gdm in fallback mode
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
3.5.x
Other Linux
: Normal major
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-30 21:26 UTC by Jeremy Bicha
Modified: 2012-09-06 17:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backtrace (3.40 KB, text/x-log)
2012-09-05 21:04 UTC, darkxst
  Details
greeter: explicitly quit when bus goes away (2.04 KB, patch)
2012-09-05 22:24 UTC, Ray Strode [halfline]
committed Details | Review

Description Jeremy Bicha 2012-08-30 21:26:31 UTC
1. Use GDM 3.5.90 in Fallback mode (this is the 3.0 look, not the fancy GNOME Shell style). Fallback mode is generally what people get when using VirtualBox; it can also be force-enabled.
2. Log in.
3. The login screen still shows up but it can't be interacted with. It's especially bad in Classic mode as the top bar from GDM competes with the top bar from gnome-panel.
Comment 1 Ray Strode [halfline] 2012-09-05 02:51:02 UTC
Hmm, I can't reproduce this.  Can you attach to gdm-simple-greeter and get a backtrace?
Comment 2 darkxst 2012-09-05 21:04:04 UTC
Created attachment 223576 [details]
backtrace

here is a backtrace from gdm-simple-greeter, taken after login.
Comment 3 Ray Strode [halfline] 2012-09-05 22:24:41 UTC
Created attachment 223584 [details] [review]
greeter: explicitly quit when bus goes away

The process is supposed to get automatically terminated when
the session bus goes away, but that isn't seemingly working.

This commit forces it to quit explicitly.
Comment 4 Ray Strode [halfline] 2012-09-05 22:25:02 UTC
would be curious if attachment 223584 [details] [review] helps
Comment 5 darkxst 2012-09-05 22:37:32 UTC
yes, that fixes things. The greeter now gets terminated correctly!
Comment 6 Ray Strode [halfline] 2012-09-06 17:55:52 UTC
interesting and weird
Comment 7 Ray Strode [halfline] 2012-09-06 17:56:20 UTC
Attachment 223584 [details] pushed as 19740de - greeter: explicitly quit when bus goes away