greeter: explicitly quit when bus goes away

The process is supposed to get automatically terminated when
the session bus goes away, but that isn't seemingly working.

This commit forces it to quit explicitly.

https://bugzilla.gnome.org/show_bug.cgi?id=683068